# ssa-improved

./: .gitignore  .gitmodules  CMakeLists.txt  EMULATED_PORTAL.md  LICENSE.md  README.md  THIRD_PARTY_NOTICES.md
linux/: portal_launch.sh  portal_proxy.py
src/: addresses.cpp  addresses.h  config.h  data_types.h  hook_helpers.h  log.cpp  log.h  main.cpp  patches.cpp  patches.h  xinput1_3.def  xinput1_3.h
src/game/: character.h  difficulty.h  game.h  grassPatch.h  inputSystem.h  mp_game.h  sheepReaction.h  spyro_character_settings.h  targeting.h
src/graphics/: d3d9_hooks.h  window_hooks.h
src/imgui/: ui.cpp  ui.h
src/imgui/fonts/: IconsSkylanders.h  materialicons.cpp  skylanders_icons.cpp  varela_round_reg.cpp
src/imgui/images/: portal_content_data.h
src/imgui/ui_pages/: creator.cpp  game_tab.cpp  portal_tab.cpp  settings_tab.cpp
src/imgui/ui_pages/diagnostics/: character_table.cpp  diagnostic_window.cpp  target_table.cpp
src/input/: dinput_hooks.h  winmm_hooks.h
src/libusb/: hid.h  kernel.h  portal_device.h  setupapi.h
src/portal/: IPortalBackend.h  hid.h  kernel.h  portal_device.h  setupapi.h
src/portal/backend/: EmulatedBackend.h  ProxyBackend.h  WinUSBBackend.h
src/skylanders/: SkylanderInfo.h  SkylanderManager.cpp  SkylanderManager.h
src/window/: d3d9_hooks.h  texture_mods.h  window_hooks.h
